log
Sat Apr 23 22:18:18 UTC 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:3: error: expected ‘;’ before ‘return’
   return NULL;
   ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
38c8363
Sat Apr 23 22:19:02 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
9db88b7
Sat Apr 23 22:53:33 UTC 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
3b65e14
Sun Apr 24 21:42:39 UTC 2022: 
 treemap.c | 61 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 60 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:19: error: invalid initializer
   TreeNode nodo = createTreeNode(key,value);
                   ^~~~~~~~~~~~~~
treemap.c:52:18: error: invalid initializer
   TreeNode aux = tree->root;
                  ^~~~
treemap.c:54:6: error: expected ‘(’ before ‘tree’
   if tree->root == NULL{
      ^~~~
treemap.c:54:10: error: statement with no effect [-Werror=unused-value]
   if tree->root == NULL{
      ~~~~^~~~~~
treemap.c:73:9: error: invalid operands to binary == (have ‘TreeNode {aka struct TreeNode}’ and ‘void *’)
   if(aux==NULL){
         ^~
treemap.c:74:8: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     aux->parent = tree->current->parent;
        ^~
treemap.c:75:32: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     if(tree->lower_than(key,aux->parent->pair->key) == 1){
                                ^~
treemap.c:76:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->parent->left = aux;
          ^~
treemap.c:79:10: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux->parent->right = aux;
          ^~
treemap.c:82:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:51:12: error: unused variable ‘nodo’ [-Werror=unused-variable]
   TreeNode nodo = createTreeNode(key,value);
            ^~~~
treemap.c: In function ‘removeNode’:
treemap.c:105:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘rigth’; did you mean ‘right’?
         node->parent->left = node->rigth;
                                    ^~~~~
                                    right
cc1: all warnings being treated as errors
Compilation failed
3e5838d
Sun Apr 24 23:31:37 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:6: error: expected ‘(’ before ‘tree’
   if tree->root == NULL{
      ^~~~
treemap.c:54:10: error: statement with no effect [-Werror=unused-value]
   if tree->root == NULL{
      ~~~~^~~~~~
treemap.c: In function ‘removeNode’:
treemap.c:107:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘rigth’; did you mean ‘right’?
         node->parent->left = node->rigth;
                                    ^~~~~
                                    right
cc1: all warnings being treated as errors
Compilation failed
44127a6
Sun Apr 24 23:32:38 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:18: error: ‘nodo’ undeclared (first use in this function)
     tree->root = nodo;
                  ^~~~
treemap.c:56:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5448097
Sun Apr 24 23:33:08 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d996282
Mon Apr 25 00:34:29 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c4b8306
Mon Apr 25 00:37:15 UTC 2022: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
40e29a4
Mon Apr 25 00:41:32 UTC 2022: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c:80:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
9fa0d30
Mon Apr 25 00:42:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
611b4bf
